# flow-like

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  about.toml  biome.json  flow-like.config.json  mise.toml  package.json  ruff.toml
.cargo/: fast-compile.toml
.github/: release.yml
.github/instructions/: api.instructions.md  general-coding.instructions.md  node-creation.instructions.md  rust.instructions.md
.github/workflows/: alpha-release.yml  (+7 more)
.run/: Dev MacOS.run.xml
apps/backend/aws/api/: Cargo.toml
apps/backend/aws/api/src/: main.rs
apps/backend/aws/event-bridge/: Cargo.toml  Dockerfile
apps/backend/aws/event-bridge/src/: main.rs
apps/backend/aws/executor/: Cargo.toml
apps/backend/aws/executor-async/: Cargo.toml  README.md
apps/backend/aws/executor-async/src/: execution.rs  main.rs
apps/backend/aws/executor/src/: main.rs
apps/backend/docker-compose/api/: Cargo.toml  Dockerfile
apps/backend/docker-compose/api/src/: config.rs  main.rs  metrics.rs  storage.rs
apps/backend/docker-compose/runtime/: Cargo.toml  Dockerfile
apps/backend/docker-compose/runtime/src/: config.rs  main.rs  metrics.rs
apps/backend/docker-compose/sink-services/: Cargo.toml  Dockerfile
apps/backend/docker-compose/sink-services/src/: api_client.rs  cron.rs  discord.rs  main.rs  storage.rs  telegram.rs
apps/backend/kubernetes/api/: Cargo.toml  Dockerfile
apps/backend/kubernetes/api/src/: config.rs  health.rs  main.rs  metrics.rs  storage.rs
apps/backend/kubernetes/executor/: Cargo.toml  Dockerfile
apps/backend/kubernetes/executor/src/: main.rs  metrics.rs
apps/backend/kubernetes/sink-trigger/: Cargo.toml  Dockerfile
apps/backend/kubernetes/sink-trigger/src/: main.rs
apps/backend/local/api/: Cargo.toml  package.json
apps/backend/local/api/src/: main.rs
apps/backend/local/runtime/: Cargo.toml  package.json
apps/backend/local/runtime/src/: config.rs  main.rs
apps/benchmark/: Cargo.toml
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/desktop/src-tauri/configs/: tauri.ios.conf.json  tauri.linux.x64.conf.json  tauri.macos.arm.conf.json  tauri.macos.intel.conf.json  tauri.win.x64.conf.json
apps/desktop/src-tauri/src/: deeplink.rs  event_bus.rs  event_sink.rs  functions.rs  lib.rs  main.rs  settings.rs  state.rs  tray.rs  utils.rs
apps/desktop/src-tauri/src/event_sink/: cron.rs  deeplink.rs  discord.rs  email.rs  file.rs  geolocation.rs  github.rs  http.rs  manager.rs  mcp.rs  mqtt.rs  nfc.rs  notion.rs  rss.rs  shortcut.rs  slack.rs  storage.rs  stubs.rs  telegram.rs  web_watcher.rs  webhook.rs
apps/desktop/src-tauri/src/functions/: ai.rs  app.rs  bit.rs  developer.rs  event_bus_commands.rs  event_sink_commands.rs  file.rs  flow.rs  interaction.rs  permissions.rs  registry.rs  statistics.rs  tmp.rs
apps/desktop/src-tauri/src/functions/a2ui/: mod.rs  page.rs  route.rs  widget.rs
apps/desktop/src-tauri/src/functions/ai/: copilot.rs  copilot_sdk_tools.rs  invoke.rs
apps/desktop/src-tauri/src/functions/app/: sharing.rs  tables.rs
apps/desktop/src-tauri/src/functions/download/: init.rs
apps/desktop/src-tauri/src/functions/flow/: board.rs  catalog.rs  copilot.rs  event.rs  run.rs  storage.rs  template.rs
apps/desktop/src-tauri/src/functions/recording/: capture.rs  fingerprint.rs  generator.rs  mod.rs  screenshot.rs  state.rs
apps/desktop/src-tauri/src/functions/settings/: profiles.rs
libs/platform/python/: README.md  pyproject.toml
libs/platform/python/flow_like/: __init__.py  _auth.py  _http.py  bits.py  boards.py  chat.py  client.py  database.py  events.py  execution.py  files.py  sinks.py
libs/wasm-sdk/wasm-sdk-cpp/: CMakeLists.txt  README.md
libs/wasm-sdk/wasm-sdk-cpp/include/: flow_like_sdk.h
libs/wasm-sdk/wasm-sdk-cpp/src/: json.h  sdk.cpp
libs/wasm-sdk/wasm-sdk-python/: .gitignore  README.md  mise.toml  pyproject.toml
libs/wasm-sdk/wasm-sdk-python/flow_like_wasm_sdk/: __init__.py  bridge.py  context.py  helpers.py  host.py  types.py
libs/wasm-sdk/wasm-sdk-python/tests/: test_context.py  test_host.py  test_types.py
libs/wasm-sdk/wasm-sdk-rust/: Cargo.toml  README.md
libs/wasm-sdk/wasm-sdk-rust/src/: context.rs  host.rs  lib.rs  macros.rs  mock.rs  types.rs
templates/: mise.toml  wasm-capability-matrix.md
templates/wasm-node-cpp/: .gitignore  CMakeLists.txt  README.md  flow-like.toml  mise.toml
templates/wasm-node-cpp/.github/workflows/: build.yml
templates/wasm-node-cpp/examples/: http_request.cpp
templates/wasm-node-cpp/src/: node.cpp
templates/wasm-node-lua/: CMakeLists.txt  README.md  flow-like.toml  mise.toml
templates/wasm-node-lua/examples/: http_request.lua
templates/wasm-node-lua/src/: node.lua
templates/wasm-node-python/: .gitignore  README.md  app.py  build.py  flow-like.toml  mise.toml  pyproject.toml
templates/wasm-node-python/.github/workflows/: build.yml
templates/wasm-node-python/componentize_py_async_support/: __init__.py  futures.py  streams.py
templates/wasm-node-python/examples/: control_flow.py  math_nodes.py  permissions.py  string_nodes.py
templates/wasm-node-python/src/: node.py  sdk.py
templates/wasm-node-python/tests/: conftest.py  test_control_flow.py  test_math_nodes.py  test_node.py  test_sdk.py  test_string_nodes.py
templates/wasm-node-python/wit_world/: __init__.py
templates/wasm-node-python/wit_world/imports/: logging.py  metadata.py  pins.py  streaming.py  variables.py
templates/wasm-node-rust/: Cargo.toml  README.md  flow-like.toml  mise.toml
templates/wasm-node-rust/.github/workflows/: build.yml
templates/wasm-node-rust/examples/: control_flow.rs  http_request.rs  json_nodes.rs  math_nodes.rs  string_nodes.rs  validation_nodes.rs
templates/wasm-node-rust/src/: lib.rs
tests/: docker-compose.test.yml
tools/: debug-auth.ts  gen-execution-keys.sh  gen-pk.sh  gen-sink-jwt.ts  generate-licenses.ts  generate-schema.ts  make-licenses.ts
(+1204 files in other folders)
