[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "apps/backend/local/api",
    "apps/schema-gen",
    "apps/benchmark",
    "apps/backend/aws/runtime",
    "apps/backend/aws/runtime-async",
    "apps/backend/aws/api",
    "apps/backend/aws/media-transformer",
    "apps/backend/aws/file-tracker",
    "packages/core",
    "packages/model-provider",
    "packages/bits",
    "packages/types",
    "packages/catalog",
    "packages/catalog-macros",
    "packages/storage",
    "packages/api",
    "apps/utils/board-decoder",
]

[workspace.dependencies]
flow-like = { path = "packages/core" }
flow-like-types = { path = "packages/types" }
flow-like-api = { path = "packages/api" }
flow-like-model-provider = { path = "packages/model-provider" }
flow-like-bits = { path = "packages/bits" }
flow-like-catalog = { path = "packages/catalog" }
flow-like-catalog-macros = { path = "packages/catalog-macros" }
flow-like-storage = { path = "packages/storage" }
lambda_http = "0.15.1"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.134"
schemars = {version="1.1.0", features = ["preserve_order"]}
chrono = "0.4.41"
chrono-tz = "0.10.4"
iana-time-zone = "0.1.64"
axum = {version="0.8.4", features=["http2", "multipart"]}
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "seaography" ] }
tower = "0.5.2"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
hyper = {version = "1.5.2", features = ["full", "client"]}
hyper-util = {version = "0.1.10", features = ["full"]}
tracing = "0.1.41"
sentry-tracing = "0.45.0"
sentry = "0.45.0"
sentry-tower = { version = "0.38.1", features = ["axum", "axum-matched-path"] }
tower-http = {version="0.6.6", features = ["full"]}
async-stripe = {version="0.41.0", features = ["runtime-tokio-hyper"]}
futures-util = "0.3.31"
moka = { version = "0.12.11", features = ["sync"] }
bitflags = "2.9.4"
blake3 = "1.8.2"
lambda_runtime = "0.14.2"
aws-config = "1.8.8"
aws-sdk-dynamodb = "1.80.0"
aws-sdk-s3 = "1.93.0"
aws-sdk-sesv2 = "1.85.0"
tokio = {version="1.47.1"}
urlencoding = "2.1.3"
image = "0.25.6"
imageproc = "0.25.0"
webp = "0.3.1"
aws-sdk-sts = "1.88.0"
ahash = "0.8.12"
base64 = "0.22.1"
ndarray = "0.16.1"
dirs-next = "2.0.0"
regex = "1.11.3"
rig-core = {version="0.24.0", features = ["rmcp"]}
async-trait = "0.1.89"
jsonschema = "0.33.0"
rmcp = {version="0.8.5", features = ["auth", "client", "client-side-sse","macros","transport-streamable-http-client-reqwest","transport-streamable-http-server"]}
thiserror = "2.0.17"
mimalloc = { version = "0.1.48", default-features = false }
lettre = { version = "0.11.17", features = ["tokio1-native-tls"] }
reqwest = { version = "0.12.15", features = ["json"] }

[profile.dev]
split-debuginfo = "unpacked"

