[project]
name = "flow-like-wasm-node-python"
version = "0.1.0"
description = "Template for creating Flow-Like WASM nodes in Python"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "flow-like-wasm-sdk",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
build = [
    "componentize-py>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
