[package]
name = "flow-like-desktop"
version = "0.0.2"
description = "Flow-Like, Automation done with the press of a Button"
authors = ["TM9657 GmbH"]
repository = "https://github.com/TM9657/flow-like/"
edition = "2024"
homepage = "https://flow-like.com"
categories = ["GenAI", "AI", "Productivity"]
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
flow-like = { workspace = true, features = ["tauri", "local-ml"] }
flow-like-catalog = { workspace = true, features = ["local-ml"] }
flow-like-types.workspace = true
tauri = { version = "2.8.5", features = [
    "protocol-asset",
    "macos-private-api",
] }
window-vibrancy = "0.6.0"
anyhow = "1.0.95"
sentry = { version = "0.42.0", features = ["anyhow"] }
sentry-tracing = "0.42.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = { version = "0.1.41", features = ["async-await", "attributes"] }
dirs-next.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
image.workspace = true
imageproc.workspace = true
webp.workspace = true
tauri-plugin = "2.4.0"
tauri-plugin-shell = "2.3.1"
tauri-plugin-log = "2.7.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-fs = "2.4.2"
urlencoding.workspace = true
tauri-plugin-opener = "2.5.0"
tracing-oslog = "0.3.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.3.4", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.0"
tauri-plugin-updater = "2.9.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
incremental = false
split-debuginfo = "unpacked" # macOS
debug = 0

[profile.release.package."*"]
opt-level = "z"

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked" # macOS
incremental = true

[profile.dev.package."*"]
opt-level = 0
