[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-like"
version = "0.1.2"
description = "Python SDK for the Flow-Like API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Flow-Like" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
lance = ["lancedb>=0.6.0"]
langchain = ["langchain-core>=0.3.0"]

[project.urls]
Homepage = "https://github.com/TM9657/flow-like"
Repository = "https://github.com/TM9657/flow-like"
Issues = "https://github.com/TM9657/flow-like/issues"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23"]
