[project]
name = "flow-like-wasm-sdk"
version = "0.1.0"
description = "SDK for building Flow-Like WASM nodes in Python"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "TM9657" }]
keywords = ["flow-like", "wasm", "sdk", "component-model"]

[project.optional-dependencies]
# Install with: pip install flow-like-wasm-sdk[schema]
schema = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flow_like_wasm_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"flow_like_wasm_sdk/wit" = "flow_like_wasm_sdk/wit"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]
