[package]
name = "flow-like-wasm-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Flow-Like WASM nodes"
license = "MIT"
repository = "https://github.com/TM9657/flow-like"

[workspace]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"

[features]
default = []
