[package]
name = "aws-event-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["cloudwatch_events"] }
flow-like-types.workspace = true
mimalloc.workspace = true
lambda_runtime = { version = "1.0.2", features = ["anyhow"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
