[package]
name = "aws-executor-async"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["sqs"] }
flow-like.workspace = true
flow-like-types.workspace = true
flow-like-executor.workspace = true
mimalloc.workspace = true
lambda_runtime = {version="0.14.1", features = ["anyhow"]}
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
