[package]
name = "docker-compose-api"
version = "0.1.0"
edition = "2024"
description = "Flow-Like Docker Compose API Service"

[dependencies]
flow-like.workspace = true
flow-like-api = { workspace = true, features = ["kubernetes", "redis", "azure", "smtp", "sendgrid"] }
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog.workspace = true
mimalloc.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
chrono.workspace = true

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
