[package]
name = "k8s-api"
version = "0.1.0"
edition = "2024"
description = "Flow-Like Kubernetes API Service"

[dependencies]
flow-like.workspace = true
# Note: Enable the storage feature matching your STORAGE_PROVIDER
# For AWS: use features = ["kubernetes", "redis", "aws", "cognito", "ses", "smtp", "sendgrid"]
# For Azure: use features = ["kubernetes", "redis", "azure", "smtp", "sendgrid"]
flow-like-api = { workspace = true, features = ["kubernetes", "redis", "azure", "smtp", "sendgrid"] }
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog.workspace = true
mimalloc.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
