[package]
name = "k8s-executor"
version = "0.1.0"
edition = "2024"
description = "Flow-Like Kubernetes Workflow Executor"

[dependencies]
flow-like.workspace = true
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog = { workspace = true, features = ["all-execute", "local-ml", "remote"] }
flow-like-executor = { workspace = true, features = ["all-execute"] }
mimalloc.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
base64 = "0.22"
axum.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
