[package]
name = "k8s-sink-trigger"
version = "0.1.0"
edition = "2024"
description = "Ultra-lean Kubernetes sink trigger for CronJobs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
