[package]
name = "local-api"
version = "0.1.0"
edition = "2024"

[dependencies]
flow-like-api = {workspace = true, features = ["aws"]}
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog.workspace = true
socket2 = "0.5.9"
tracing-subscriber.workspace = true
dotenv.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 0
