[package]
name = "local-api"
version = "0.1.0"
edition = "2024"

[dependencies]
flow-like.workspace = true
flow-like-api = { workspace = true, features = ["aws"] }
flow-like-types.workspace = true
flow-like-storage.workspace = true
flow-like-catalog-core.workspace = true
flow-like-catalog-std.workspace = true
flow-like-catalog-data.workspace = true
flow-like-catalog-web.workspace = true
flow-like-catalog-media.workspace = true
flow-like-catalog-ml.workspace = true
flow-like-catalog-onnx.workspace = true
flow-like-catalog-llm.workspace = true
flow-like-catalog-processing.workspace = true
mimalloc.workspace = true
socket2 = "0.6.0"
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
sentry-tracing.workspace = true
sentry.workspace = true
oasgen = {version="0.25.0", features = ["axum"]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 0
